# insouwiki

./: .gitignore  Charte documentaire d'InsouWiki.txt  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE-APPLICATION.md  ARCHITECTURE-DONNEES.md  ARCHITECTURE-EXPLORATION.md  BIBLIOTHEQUE-RAISONNEURS-DOCUMENTAIRES.md  BOUSSOLE-DU-PROJET.md  CARTE-CONCEPTUELLE.md  CONTRAT-DOCUMENTAIRE.md  CORPUS-DOCUMENTAIRE-DE-REFERENCE.md  CYCLE-DE-VIE-DOCUMENT.md  DOMAINE-CONNAISSANCE.md  DOMAINE-CONTINUITE-DOCUMENTAIRE.md  DOMAINE-CONVERGENCE-DOCUMENTAIRE.md  DOMAINE-DIVERGENCE-DOCUMENTAIRE.md  DOMAINE-EXPLORATION-DOCUMENTAIRE.md  DOMAINE-FAITS.md  DOMAINE-RAISONNEMENT-DOCUMENTAIRE.md  DOMAINE-RELATIONS.md  DOMAINE-SUJETS-DOCUMENTAIRES.md  ENVIRONNEMENT-DEVELOPPEMENT.md  ESPRIT.md  ETAT-DU-PROJET.md  EXPERIENCES-DOCUMENTAIRES.md  EXPERIENCES-LECTEUR.md  EXPLOITATION.md  EXPLORATION-BUILDER.md  EXPLORATION-DOCUMENTAIRE.md  HYPOTHESE-CLUSTER-DOCUMENTAIRE.md  HYPOTHESE-SUJET-DOCUMENTAIRE.md  LE-PARCOURS-DE-LA-PREUVE.md  MANIFESTE-DE-L-EXPLORATION-DOCUMENTAIRE.md  MANIFESTE.md  METHODE-CONSTRUCTION-CONNAISSANCES.md  METHODE-DE-CONCEPTION.md  METHODE-DE-SEQUENCAGE.md  METHODE-DETECTION-EVOLUTIONS.md  METHODE-EXTRACTION-FAITS.md  METHODE-RAISONNEMENT-DOCUMENTAIRE.md  OBJET-EXPLORATION-DOCUMENTAIRE.md  OBJET-EXPLORATION-ITEM.md  OBJET-PORTE-D-ENTREE-DOCUMENTAIRE.md  (+11 more)
docs/adr/: ADR-0004-assemblage-application.md  ADR-0005connaissance documentaire.md  ADR-0006-le-domaine-est-guide-par-les-experiences-lecteur.md
scripts/: test_openai_transcription.py
tests/: test_application.py
(+101 files in other folders)
