[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "insouwiki"
version = "0.1.0"
description = "Moteur documentaire d'InsouWiki"
requires-python = ">=3.13"

dependencies = [
    "typer",
    "rich",
    "pydantic",
    "requests",
    "python-dotenv",
    "google-api-python-client",
    "sqlalchemy",
    "psycopg[binary]",
    "qdrant-client"
]

[project.scripts]
insouwiki = "insouwiki.cli.main:app"